--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,58 +3,77 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E8EAF6"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="64dp"
-    android:paddingRight="64dp"
-    android:paddingTop="32dp"
+    android:paddingBottom="24dp"
+    android:paddingTop="24dp"
     tools:context="comconnordeloachmy_app_portfolio.github.www.appportfolio.MainActivity">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/title" />
+        android:paddingBottom="16dp"
+        android:text="@string/title"
+        android:textSize="24sp" />
 
     <Button
         android:id="@+id/spotify_button"
+        style="@style/Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="#FF9800"
         android:onClick="lnchAppBtn"
-        android:text="@string/app1"/>
+        android:text="@string/app1" />
 
     <Button
         android:id="@+id/scores_button"
+        style="@style/Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="#FF9800"
         android:onClick="lnchAppBtn"
-        android:text="@string/app2"/>
+        android:text="@string/app2" />
 
     <Button
         android:id="@+id/library_button"
+        style="@style/Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="#FF9800"
         android:onClick="lnchAppBtn"
-        android:text="@string/app3"/>
+        android:text="@string/app3" />
 
     <Button
         android:id="@+id/buildb_button"
+        style="@style/Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="#FF9800"
         android:onClick="lnchAppBtn"
-        android:text="@string/app4"/>
+        android:text="@string/app4" />
 
     <Button
         android:id="@+id/reader_button"
+        style="@style/Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="#FF9800"
         android:onClick="lnchAppBtn"
-        android:text="@string/app5"/>
+        android:text="@string/app5" />
 
     <Button
         android:id="@+id/my_app_button"
+        style="@style/Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#F44336"
         android:onClick="lnchAppBtn"
-        android:text="@string/app6"/>
+        android:text="@string/app6"
+        android:textColor="#FAFAFA" />
 </LinearLayout>
