--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E8EAF6"
+    android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
     android:paddingBottom="24dp"
     android:paddingTop="24dp"
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:background="#FF9800"
+        android:background="@color/colorPrimary"
         android:onClick="lnchAppBtn"
         android:text="@string/app1" />
 
@@ -33,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:background="#FF9800"
+        android:background="@color/colorPrimary"
         android:onClick="lnchAppBtn"
         android:text="@string/app2" />
 
@@ -43,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:background="#FF9800"
+        android:background="@color/colorPrimary"
         android:onClick="lnchAppBtn"
         android:text="@string/app3" />
 
@@ -53,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:background="#FF9800"
+        android:background="@color/colorPrimary"
         android:onClick="lnchAppBtn"
         android:text="@string/app4" />
 
@@ -63,7 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:background="#FF9800"
+        android:background="@color/colorPrimary"
         android:onClick="lnchAppBtn"
         android:text="@string/app5" />
 
@@ -72,7 +72,7 @@
         style="@style/Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#F44336"
+        android:background="@color/colorAccent"
         android:onClick="lnchAppBtn"
         android:text="@string/app6"
         android:textColor="#FAFAFA" />
