Moves activity_main button's shared attributes to res/styles

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,10 @@
     <style name="Button">
         <item name="android:layout_marginLeft">64dp</item>
         <item name="android:layout_marginRight">64dp</item>
+        <item name="android:layout_marginBottom">16dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:onClick">lnchAppBtn</item>
     </style>
 
 </resources>
