--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#FF9800</color>
-    <color name="colorPrimaryDark">#E8EAF6</color>
-    <color name="colorAccent">#F44336</color>
+    <color name="colorPrimaryDark">#E65100</color>
+    <color name="colorAccent">#FF6D00</color>
+
+    <!-- color for the backgound of activity and fragments -->
+    <color name="colorBackground">#E8EAF6</color>
 </resources>
